# eqe

./: README.md  __init__.py  config.ini  eqe.py  setup.cfg  setup.py
eqe/: eqe.py
examples/: example.py
src/eqe/: __init__.py  eqe.py
