[metadata]
name = eqe
version = 0.0.1
author = James Ball
description = EQE measurement functions
long_description = file: README.md
classifiers =
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9    
project_urls =
    homepage = https://github.com/jmball/eqe

[options]
packages = find:
install_requires =
    scipy
    numpy
python_requires = >=3.6
package_dir =
    =src

[options.extras_require]
testing =
    centralcontrol
    srs_sr830
    acton_sp2150
    rigol_dp800

[options.packages.find]
where = src

